corpus/cpp/overload/case-07/snapshots/gcc9_12/single_sink_structured/render.debug.txt
error: [type_mismatch] invalid conversion from 'const char*' to 'short int' @ src/main.cpp:5:17
raw : invalid conversion from 'const char*' to 'short int'
| src/main.cpp:5:17
|     takes_short("x");
|                 ^~
debug: rule_id=rule.family.type_overload.structured_or_message
debug: matched_conditions=message_contains=invalid conversion, phase=semantic
explain: repair_unit=repair-unit:node-json-0 proof=Unresolved visibility=NeverHidden
explain: member=node:json-0 target=DiagnosticNode { node_ref: "json-0" } unresolved=false
explain: raw_capture=diagnostics.json

note: [unknown]   initializing argument 1 of 'void takes_short(short int)' @ src/main.cpp:1:18
note: wrapper confidence is low; verify against the preserved raw diagnostics
raw :   initializing argument 1 of 'void takes_short(short int)'
| src/main.cpp:1:18
| void takes_short(short);
|                  ^~~~
debug: rule_id=rule.family.unknown
debug: matched_conditions=no_family_rule_matched
debug: suppression_reason=generic_fallback
explain: repair_unit=repair-unit:node-json-1 proof=Unresolved visibility=NeverHidden
explain: member=node:json-1 target=DiagnosticNode { node_ref: "json-1" } unresolved=false
explain: raw_capture=diagnostics.json